[tool.poetry]
name = "dovesnap"
version = "1.1.3"
description = "graphviz generator of dovesnap networks"
authors = ["Charlie Lewis <clewis@iqt.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8 <3.11"
docker = "6.0.0"
faucetconfrpc = "0.22.42"
graphviz = "0.20.1"

[tool.poetry.dev-dependencies]
pytype = "2022.9.27"
"ruamel.yaml" = "0.17.21"

[tool.poetry.scripts]
graph_dovesnap = "bin/graph_dovesnap"
cleanup_dovesnap = "bin/cleanup_dovesnap"

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/dovesnap"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
