[tool.poetry]
name = "dovesnap"
version = "1.1.14"
description = "graphviz generator of dovesnap networks"
authors = ["Charlie Lewis <clewis@iqt.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8 <3.11"
docker = "6.1.3"
faucetconfrpc = "0.55.58"
graphviz = "0.20.1"
"ruamel.yaml" = "^0.17"

[tool.poetry.dev-dependencies]
pytype = "2023.7.28"

[tool.poetry.scripts]
graph_dovesnap = "dovesnap.graph_dovesnap:main"

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/dovesnap"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
